<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registry.RegistryFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rectangle"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"
        android:hint="@string/txt_username"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edtUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistry"
        android:background="@drawable/button_selector_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_registry"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>