<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detailUser.DetailUserFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_users"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/txtUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_username"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txvEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>